recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:10: error: illegal start of simple expression
      var x= 0
      ^Tree:22: error: ')' expected but '}' found.
  }
  ^